Mon Mar 29 06:56:11 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

	* tests/Integer_Test.cpp:
	  Fixed a warning in Win32 builds.

Fri Mar 26 09:49:10 2004  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* tests/Integer_Test.cpp:

	  Fixed a warning in Win32 builds.

Fri Aug 29 07:56:19 2003  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* tests/Octet_Test.cpp (TestOctet):

	  Fixed "string literal converted to char *" warning.  String
	  literals are now considered "const" by standard C++.

Sun Nov 24 17:04:33 2002  Douglas C. Schmidt  <schmidt@tango.doc.wustl.edu>

	* agent/main.cpp (main): Added ACE::init() to the beginning of
	  main() to prevent crashes on Windows.  Thanks to Huseyin Calgin
 	  <calgin@yahoo.com> for reporting this.

Fri Feb  8 04:42:21 2002  Douglas C. Schmidt  <schmidt@tango.doc.wustl.edu>

	* asnmp/transaction.cpp (run): Changed the code to use ACE_Reactor::instance ()
	  rather than a local ACE_Reactor on the stack.  Thanks to Paresh
 	  Raote <p_raote@yahoo.com> for reporting this.

Thu Jan 25 12:48:33 2001  Craig Rodrigues <crodrigu@bbn.com>

	* agent/Makefile.orig
	  asnmp/address.h.orig
	  examples/next/next.cpp
	  examples/trap/trap.cpp
	  examples/walk/walk.cpp
	  tests/test_config.h
	  tests/Varbind_Test.cpp
	  tests/Counter64_Test.cpp
	  tests/run_tests.sh

	  New agent Makefile, and compilation fixes.

Sun Jun  4 14:51:33 2000  Darrell Brunsch <brunsch@uci.edu>

        * asnmp-overview.html:

          Added missing CVS Id string.

Tue Dec 21 16:22:21 1999  David L. Levine  <levine@cs.wustl.edu>

        * tests/*.cpp: removed the unnecessary explicit template
          instantiation.  Other instantiations were necessary
          with it, and it seemed to serve no useful purpose:
          there was no use of an ACE_Unbounded_Set<Log_Msg *>.
          Thanks to Jose Rubio <jrubio@tr.comm.mot.com> for
          reporting link failures with Sun CC 5.0, with explicit
          template instantiation enabled.
