@@ -1,3 +1,11 @@
+Fri Apr 16 16:53:20 2004  Ossama Othman  <ossama@dre.vanderbilt.edu>
+
+	* tests/Gauge_Test.cpp (TestGuage):
+	* tests/Integer_Test.cpp (TestInteger32):
+
+	  Fixed some "comparison between signed and unsigned integer"
+	  warnings.
+
 Mon Mar 29 06:56:11 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>
 
 	* tests/Integer_Test.cpp:
